<resources>
    <string name="app_name">Drunk sort</string>
    <string name="title_activity_map_location">MapLocationActivity</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string-array name="Disease">
        <item>ไม่มี</item>
        <item>โรคหัวใจ</item>
        <item>เบาหวาน</item>
        <item>ความดัน</item>
        <item>โรคตับ</item>
        <item>โรคปอด</item>
        <item>โรคไต</item>
        <item>อื่นๆ</item>
    </string-array>

    <string-array name="Nation">
        <item>ไม่มี</item>
        <item>ไทย</item>
        <item>กัมพูชา</item>
        <item>เกาหลีใต้</item>
        <item>จีน</item>
        <item>ญี่ปุ่น</item>
        <item>บังกลาเทศ</item>
        <item>พม่า</item>
        <item>ฟิลิปปินส์</item>
        <item>มาเลเซีย</item>
        <item>ลาว</item>
        <item>เวียดนาม</item>
        <item>สหรัฐอเมริกา</item>
        <item>อังกฤษ</item>
        <item>อื่นๆ</item>
    </string-array>

    <string-array name="Edu_level">
        <item>ไม่ทราบ</item>
        <item>อนุบาล</item>
        <item>ประถมศึกษา</item>
        <item>มัธยมศึกษาตอนต้น</item>
        <item>มัธยมศึกษาตอนปลาย</item>
        <item>ปวช/ปวส/เทคนิค</item>
        <item>ปริญญาตรี</item>
        <item>ปริญญาโท</item>
        <item>ปริญญาเอก</item>
    </string-array>

    <string-array name="menu">
        <item>เปลี่ยนรหัสผ่าน</item>
        <item>ตั้งค่า</item>
        <item>ออกจากระบบ</item>
    </string-array>

    <array name="icons_menu">
        <item>@drawable/ic_save</item>
        <item>@drawable/ic_save</item>
        <item>@drawable/ic_save</item>
    </array>

    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="other_gen">อื่นๆ</string>
    <string name="no_emp">ไม่ระบุ</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="next">ต่อไป</string>
    <string name="welcome">ยินดีต้อนรับ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="new_acc">สร้างบัญชีใหม่</string>
    <string name="forgot"><u>ลืมรหัสผ่าน</u></string>

    <string name="title_main">ตรวจเช็คและเก็บข้อมูลการติดสุรา</string>
    <string name="title_test">การทดสอบ</string>
    <string name="title_data">คลังข้อมูล</string>
    <string name="title_team">จัดการทีม</string>
    <string name="manage_team">จัดการทีม</string>
    <string name="name">ชื่อผู้รับการทดสอบ</string>
    <string name="username_email">ชื่อผู้ใช้/อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="old_pass">รหัสผ่านเก่า</string>
    <string name="new_pass">รหัสผ่านใหม่</string>
    <string name="con_password">ยืนยันรหัสผ่าน</string>
    <string name="con_new_password">ยืนยันรหัสผ่านใหม่</string>
    <string name="org_com">องค์กร/บริษัท</string>
    <string name="occa_pos">อาชีพ/ตำแหน่ง</string>
    <string name="change_pass">เปลี่ยนรหัสผ่าน</string>
    <string name="setting">ตั้งค่า</string>
    <string name="edit_per">แก้ไขข้อมูลส่วนตัว</string>
    <string name="edit">แก้ไข</string>
    <string name="gender">เพศ</string>
    <string name="age">อายุ</string>
    <string name="dob">วัน/เดือน/ปีเกิด</string>
    <string name="address">ที่อยู่</string>
    <string name="edu_level">ระดับการศึกษา</string>
    <string name="user_mail">ชื่อผู้ใช้/อีเมล</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="email">อีเมล</string>
    <string name="firstname">ชื่อจริง</string>
    <string name="lastname">นามสกุล</string>
    <string name="edit_pro">แก้ไขข้อมูลส่วนตัว</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่ใช่</string>
    <string name="flname">ชื่อ-นามสกุล</string>
    <string name="group_blood">กรุ๊ปเลือด</string>
    <string name="choose_one">เลือกข้อใดข้อหนึ่ง</string>
    <string name="disease">โรคประจำตัว</string>
    <string name="have">มี</string>
    <string name="have_not">ไม่มี</string>
    <string name="pl_enter">โปรดระบุ</string>
    <string name="note">โน๊ต</string>
    <string name="pic">ภาพถ่าย</string>
    <string name="complete">สำเร็็จ</string>
    <string name="upload_pic">อัพโหลดรูปภาพ</string>
    <string name="save">บันทึก</string>

    <string name="status">สถานะสมรส</string>
    <string name="single">โสด</string>
    <string name="married">สมรส</string>
    <string name="separated">หย่าร้าง</string>

    <string name="nation">สัญชาติ</string>
    <string name="thai">ไทย</string>

    <string name="same_pass">กรุณากรอกรหัสผ่านให้ตรงกัน</string>
    <string name="old_invalid">รหัสผ่านเก่าไม่ถูกต้อง</string>
    <string name="infor_com">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="test_taker">กรุณากรอกชื่อผู้รับการทดสอบ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>