<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileThirdActivity">

    <RelativeLayout
        android:id="@+id/bar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back_fm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_back_circle"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/component_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/ic_component_3" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar1"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanitlight"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/alert_relationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/kanitlight"
                android:text="@string/choose_one"
                android:textColor="#FF0000"
                android:visibility="invisible" />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFD600"
                android:fontFamily="@font/kanitlight"
                android:text="@string/single"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFD600"
                android:fontFamily="@font/kanitlight"
                android:text="@string/married"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/broken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFD600"
                android:fontFamily="@font/kanitlight"
                android:text="@string/separated"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#FFD600"
                android:fontFamily="@font/kanitlight"
                android:text="@string/no_emp"
                android:textColor="@color/black" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanitlight"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/alert_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/kanitlight"
                android:text="@string/choose_one"
                android:textColor="#FF0000"
                android:visibility="invisible" />

        </LinearLayout>


        <EditText
            android:id="@+id/addressAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_box"
            android:fontFamily="@font/kanitlight"
            android:hint="@string/pl_enter"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textSize="12dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanitlight"
                android:text="@string/edu_level"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/alert_edu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/kanitlight"
                android:text="@string/choose_one"
                android:textColor="#FF0000"
                android:visibility="invisible" />

        </LinearLayout>


        <Spinner
            android:id="@+id/edu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_box"
            android:fontFamily="@font/kanitlight"
            android:padding="15dp"
            android:tag="education" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanitlight"
                android:text="@string/occa_pos"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/alert_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/kanitlight"
                android:text="@string/infor_com"
                android:textColor="#FF0000"
                android:visibility="invisible" />

        </LinearLayout>


        <EditText
            android:id="@+id/occupationAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_box"
            android:fontFamily="@font/kanitlight"
            android:hint="@string/pl_enter"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textSize="12dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/kanitlight"
                android:padding="15dp"
                android:text="ข้อสังเกตเพิ่มเติม" />


            <EditText
                android:id="@+id/detailAdd"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_box"
                android:fontFamily="@font/kanitlight"
                android:hint="ระบุข้อมูลเพิ่มเติม เช่น พฤติกรรม ลักษณะอาการ
                การวินิจฉัยทางแพทย์ คำสัมภาษณ์ เป็นต้น"
                android:padding="15dp"
                android:textAlignment="textStart"
                android:textSize="12dp" />

        </LinearLayout>


        <!--        <EditText-->
        <!--            android:layout_width="90dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:hint="โปรดระบุ"-->
        <!--            android:layout_marginLeft="5dp"-->
        <!--            android:gravity="center"-->
        <!--            android:fontFamily="@font/kanitregular"-->
        <!--            android:background="@drawable/edit_text_box"-->
        <!--            android:textSize="10dp"/>-->


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_button2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/kanitregular"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>

</RelativeLayout>

